--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -18,11 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,11 +45,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0     5.7\n",
+      "1    75.2\n",
+      "2    74.4\n",
+      "3    84.0\n",
+      "4    66.5\n",
+      "5    66.3\n",
+      "6    55.8\n",
+      "7    75.7\n",
+      "8    29.1\n",
+      "9    43.7\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "s = pd.Series(lst)\n",
+    "print(s)"
    ]
   },
   {
@@ -61,11 +83,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74.4"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "s.iloc[2]"
    ]
   },
   {
@@ -77,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,11 +129,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>53.1</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>67.5</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>78.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>61.3</td>\n",
+       "      <td>40.8</td>\n",
+       "      <td>30.8</td>\n",
+       "      <td>37.8</td>\n",
+       "      <td>87.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20.6</td>\n",
+       "      <td>73.2</td>\n",
+       "      <td>44.2</td>\n",
+       "      <td>14.6</td>\n",
+       "      <td>91.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>57.4</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>96.1</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>69.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>83.6</td>\n",
+       "      <td>20.5</td>\n",
+       "      <td>85.4</td>\n",
+       "      <td>22.8</td>\n",
+       "      <td>35.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>49.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>31.8</td>\n",
+       "      <td>89.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>23.3</td>\n",
+       "      <td>40.7</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>26.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>27.6</td>\n",
+       "      <td>26.4</td>\n",
+       "      <td>53.8</td>\n",
+       "      <td>88.8</td>\n",
+       "      <td>68.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>96.6</td>\n",
+       "      <td>96.4</td>\n",
+       "      <td>53.4</td>\n",
+       "      <td>72.4</td>\n",
+       "      <td>50.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>73.7</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>43.2</td>\n",
+       "      <td>81.6</td>\n",
+       "      <td>34.7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      0     1     2     3     4\n",
+       "0  53.1  95.0  67.5  35.0  78.4\n",
+       "1  61.3  40.8  30.8  37.8  87.6\n",
+       "2  20.6  73.2  44.2  14.6  91.8\n",
+       "3  57.4   0.1  96.1   4.2  69.5\n",
+       "4  83.6  20.5  85.4  22.8  35.9\n",
+       "5  49.0  69.0   0.1  31.8  89.1\n",
+       "6  23.3  40.7  95.0  83.8  26.9\n",
+       "7  27.6  26.4  53.8  88.8  68.5\n",
+       "8  96.6  96.4  53.4  72.4  50.1\n",
+       "9  73.7  39.0  43.2  81.6  34.7"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "pd.DataFrame(b)"
    ]
   },
   {
@@ -111,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,11 +287,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Score_1</th>\n",
+       "      <th>Score_2</th>\n",
+       "      <th>Score_3</th>\n",
+       "      <th>Score_4</th>\n",
+       "      <th>Score_5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>53.1</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>67.5</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>78.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>61.3</td>\n",
+       "      <td>40.8</td>\n",
+       "      <td>30.8</td>\n",
+       "      <td>37.8</td>\n",
+       "      <td>87.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20.6</td>\n",
+       "      <td>73.2</td>\n",
+       "      <td>44.2</td>\n",
+       "      <td>14.6</td>\n",
+       "      <td>91.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>57.4</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>96.1</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>69.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>83.6</td>\n",
+       "      <td>20.5</td>\n",
+       "      <td>85.4</td>\n",
+       "      <td>22.8</td>\n",
+       "      <td>35.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>49.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>31.8</td>\n",
+       "      <td>89.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>23.3</td>\n",
+       "      <td>40.7</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>26.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>27.6</td>\n",
+       "      <td>26.4</td>\n",
+       "      <td>53.8</td>\n",
+       "      <td>88.8</td>\n",
+       "      <td>68.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>96.6</td>\n",
+       "      <td>96.4</td>\n",
+       "      <td>53.4</td>\n",
+       "      <td>72.4</td>\n",
+       "      <td>50.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>73.7</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>43.2</td>\n",
+       "      <td>81.6</td>\n",
+       "      <td>34.7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Score_1  Score_2  Score_3  Score_4  Score_5\n",
+       "0     53.1     95.0     67.5     35.0     78.4\n",
+       "1     61.3     40.8     30.8     37.8     87.6\n",
+       "2     20.6     73.2     44.2     14.6     91.8\n",
+       "3     57.4      0.1     96.1      4.2     69.5\n",
+       "4     83.6     20.5     85.4     22.8     35.9\n",
+       "5     49.0     69.0      0.1     31.8     89.1\n",
+       "6     23.3     40.7     95.0     83.8     26.9\n",
+       "7     27.6     26.4     53.8     88.8     68.5\n",
+       "8     96.6     96.4     53.4     72.4     50.1\n",
+       "9     73.7     39.0     43.2     81.6     34.7"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "df = pd.DataFrame(b, columns=colnames)\n",
+    "df"
    ]
   },
   {
@@ -136,11 +437,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Score_1</th>\n",
+       "      <th>Score_2</th>\n",
+       "      <th>Score_3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>53.1</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>67.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>61.3</td>\n",
+       "      <td>40.8</td>\n",
+       "      <td>30.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20.6</td>\n",
+       "      <td>73.2</td>\n",
+       "      <td>44.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>57.4</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>96.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>83.6</td>\n",
+       "      <td>20.5</td>\n",
+       "      <td>85.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>49.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>23.3</td>\n",
+       "      <td>40.7</td>\n",
+       "      <td>95.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>27.6</td>\n",
+       "      <td>26.4</td>\n",
+       "      <td>53.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>96.6</td>\n",
+       "      <td>96.4</td>\n",
+       "      <td>53.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>73.7</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>43.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Score_1  Score_2  Score_3\n",
+       "0     53.1     95.0     67.5\n",
+       "1     61.3     40.8     30.8\n",
+       "2     20.6     73.2     44.2\n",
+       "3     57.4      0.1     96.1\n",
+       "4     83.6     20.5     85.4\n",
+       "5     49.0     69.0      0.1\n",
+       "6     23.3     40.7     95.0\n",
+       "7     27.6     26.4     53.8\n",
+       "8     96.6     96.4     53.4\n",
+       "9     73.7     39.0     43.2"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "df2 = df[[\"Score_1\",\"Score_2\",\"Score_3\"]]\n",
+    "df2\n",
+    "#df.loc[:,[\"Score_1\", \"Score_2\", \"Score_3\"]]"
    ]
   },
   {
@@ -152,11 +566,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56.95000000000001"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "avg3 = df[\"Score_3\"].mean()\n",
+    "avg3\n",
+    "#df.describe()"
    ]
   },
   {
@@ -168,11 +596,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "88.8"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "max4= df[\"Score_4\"].max()\n",
+    "max4"
    ]
   },
   {
@@ -184,11 +625,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40.75"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "median2= df[\"Score_2\"].median()\n",
+    "median2"
    ]
   },
   {
@@ -200,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,11 +675,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>Revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>PARTY BUNTING</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4.95</td>\n",
+       "      <td>19.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>JAZZ HEARTS ADDRESS BOOK</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>1.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>SET OF 4 SANTA PLACE SETTINGS</td>\n",
+       "      <td>48</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>60.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Description  Quantity  UnitPrice  Revenue\n",
+       "7                  PARTY BUNTING         4       4.95     19.8\n",
+       "8       JAZZ HEARTS ADDRESS BOOK        10       0.19      1.9\n",
+       "9  SET OF 4 SANTA PLACE SETTINGS        48       1.25     60.0"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "newdf = pd.DataFrame(orders)\n",
+    "newdf.tail(3)\n",
+    "#newdf.head(3)\n"
    ]
   },
   {
@@ -237,11 +759,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The total quantity is 2978 and total revenue is 637.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "print(f\"The total quantity is { newdf['Quantity'].sum() } and total revenue is {newdf['Revenue'].sum()}\")"
    ]
   },
   {
@@ -253,11 +784,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11.77"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "difference = (newdf[\"UnitPrice\"].max())-(newdf[\"UnitPrice\"].min())\n",
+    "difference"
    ]
   }
  ],
@@ -277,7 +821,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
